# CodeHalper

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: cli.py  config.py  embeder.py  loader.py  retriever.py
